--- a/public/css/style-inicia-sesion.css
+++ b/public/css/style-inicia-sesion.css
@@ -17,21 +17,85 @@
 }
 
 .boton-volver-home {
-    padding: 20px
+    padding: 20px;
+}
+
+.boton-volver-home a{
+    text-decoration: none;
+    color: grey;
 }
 
 .titulo-iniciar-sesion {
-    padding: 30px;
+    padding: 20px;
     text-align: center;
+    font-size: 23px;
+    color: rgb(117, 115, 115);
 }
 
 .contenedor-iniciar-sesion {
-    margin: 50px;
+    margin: 30px;
     text-align: center;
-    background-color: var(--celeste-claro);
+    background-color: rgba(128, 128, 128, 0.24);
+    border-radius: 10px;
+
 }
 
-form p {
-    padding: 30px;
+form div {
+    padding: 20px;
 }
 
+form label{
+    display: block;
+    margin-bottom: 10px;
+    color: rgb(85, 83, 83);
+}
+
+.label-email{
+    margin-top: 30px;
+}
+
+form input {
+    border: none;
+    border-radius: 5px;
+    width: 200px;
+    height: 20px;
+}
+
+form button {
+    font-size: 15px;
+    background-color: grey;
+    color: white;
+    border: none;
+    border-radius: 10px;
+    width: 200px;
+    height: 22px;
+}
+
+
+.crear-cuenta {
+    display: block;
+    margin: auto;
+    padding-top: 1px;
+    text-decoration: none;
+    font-size: 15px;
+    background-color: grey;
+    color: white;
+    border: none;
+    border-radius: 10px;
+    width: 200px;
+    height: 20px;
+
+}
+
+.contenedor-olvidaste-contraseña{
+    padding-bottom: 50px;
+    padding-top: 3px;
+
+}
+
+.Olvidaste-contraseña{
+    text-decoration: none;
+    color: var(--celeste-oscuro);
+    font-size: 12px;
+
+}
