--- a/views/inicia-sesion.html
+++ b/views/inicia-sesion.html
@@ -60,7 +60,7 @@
                 </div>
             </form>
 
-                <a class="crear-cuenta" href="/registro">CREAR CUENTA</a>
+                <a class="boton-crear-cuenta" href="/registro">CREAR CUENTA</a>
 
            <div class="contenedor-olvidaste-contraseña">
             <a class="Olvidaste-contraseña" href="#">¿Has olvidado tu contraseña?</a>
