--- a/public/css/style-inicia-sesion.css
+++ b/public/css/style-inicia-sesion.css
@@ -10,12 +10,6 @@
     --celeste-claro: #bccfd6;
   }
 
-
-.subheader {
-
-    display : none
-}
-
 .boton-volver-home {
     padding: 20px;
 }
@@ -72,7 +66,7 @@ form button {
 }
 
 
-.crear-cuenta {
+.boton-crear-cuenta {
     display: block;
     margin: auto;
     padding-top: 1px;
