--- a/views/carrito.html
+++ b/views/carrito.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-
+<!-- Header: Navs TopHeader y Subheader -->
     <header>
         <section class="topheader">
             <div class="logo-menu"><i class="fas fa-bars" alt="logo menu"></i></div>
@@ -37,17 +37,17 @@
         </section>
 
     </header>
-
+<!-- Main: Secciones Resumen Cart - Codigo Descuento y Total -->
     <main>
         <section class="resumen-cart-productos">
             <article class="producto1">
                 <div><img src="./img/guarderia_2.jpg" alt="Guarderia"></div>
                 <div class="detalle-producto">
                     <div class="titulo-producto">
-                        <h2>Guarderia 1</h2>
+                        <h4>Guarderia 1</h4>
                     </div>
                     <div class="categoria-producto">
-                        <h3>Categoria A</h3>
+                        <h5>Categoria A</h5>
                     </div>
                     <div class="fechas-producto">
                         <p>18/10/2022 al 25/10/2022</p>
@@ -58,17 +58,17 @@
                     <div>1</div>
                     <i class="fas fa-plus"></i>
                 </div>
-                <h3 class="precio">$100,99</h3>
-                <h4 class="remover">Remover</h4>
+                <h4 class="precio">$100,99</h4>
+                <h6 class="remover">Remover</h6>
             </article>
             <article class="producto2">
                 <div><img src="./img/guarderia_canina_1.jpg" alt="Guarderia"></div>
                 <div class="detalle-producto">
                     <div class="titulo-producto">
-                        <h2>Guarderia 2</h2>
+                        <h4>Guarderia 2</h4>
                     </div>
                     <div class="categoria-producto">
-                        <h3>Categoria B</h3>
+                        <h5>Categoria B</h5>
                     </div>
                     <div class="fechas-producto">
                         <p>26/11/2022 al 25/11/2022</p>
@@ -79,17 +79,17 @@
                     <div>2</div>
                     <i class="fas fa-plus"></i>
                 </div>
-                <h3 class="precio">$280,00</h3>
-                <h4 class="remover">Remover</h4>
+                <h4 class="precio">$280,00</h4>
+                <h6 class="remover">Remover</h6>
             </article>
             <article class="producto3">
                 <div><img src="./img/guarderia1_slidec.jpg" alt="Guarderia"></div>
                 <div class="detalle-producto">
                     <div class="titulo-producto">
-                        <h2>Guarderia 3</h2>
+                        <h4>Guarderia 3</h4>
                     </div>
                     <div class="categoria-producto">
-                        <h3>Categoria C</h3>
+                        <h5>Categoria C</h5>
                     </div>
                     <div class="fechas-producto">
                         <p>04/12/2022 al 16/12/2022</p>
@@ -100,8 +100,8 @@
                     <div>2</div>
                     <i class="fas fa-plus"></i>
                 </div>
-                <h3 class="precio">$75,00</h3>
-                <h4 class="remover">Remover</h4>
+                <h4 class="precio">$75,00</h4>
+                <h6 class="remover">Remover</h6>
             </article>
         </section>
 
