--- a/views/carrito.html
+++ b/views/carrito.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-<!-- Header: Navs TopHeader y Subheader -->
+    <!-- Header: Navs TopHeader y Subheader -->
     <header>
         <section class="topheader">
             <div class="logo-menu"><i class="fas fa-bars" alt="logo menu"></i></div>
@@ -37,7 +37,7 @@
         </section>
 
     </header>
-<!-- Main: Secciones Resumen Cart - Codigo Descuento y Total -->
+    <!-- Main: Secciones Resumen Cart - Codigo Descuento y Total -->
     <main>
         <section class="resumen-cart-productos">
             <article class="producto1">
@@ -106,27 +106,29 @@
         </section>
 
         <section class="codigo-descuento">
-            <h4>Tengo un código de descuento</h4>
-            <input type="text" name="codigoDescuento">
+            <div class="cod-descuento">
+                <h4>Tengo un código de descuento</h4>
+                <input type="text" name="codigoDescuento">
+            </div>
             <button type="submit">Agregar código</button>
         </section>
 
         <section class="resumen-cart-total">
             <div class="subtotal">
-            <h4 class="subtotal-title">Subtotal:</h4>
-            <h4 class="subtotal-value">$455,99</h4>
+                <h4 class="subtotal-title">Subtotal:</h4>
+                <h4 class="subtotal-value">$455,99</h4>
             </div>
             <div class="impuestos-tasas">
-            <h4 class="impuestos-tasas-title">Impuestos y Tasas</h4>
-            <h4 class="impuestos-tasas-value">$0,00</h4>
+                <h4 class="impuestos-tasas-title">Impuestos y Tasas</h4>
+                <h4 class="impuestos-tasas-value">$0,00</h4>
             </div>
             <div class="descuento">
-            <h4 class="descuento-title">Descuento:</h4>
-            <h4 class="descuento-value">$100,00</h4>
+                <h4 class="descuento-title">Descuento:</h4>
+                <h4 class="descuento-value">$100,00</h4>
             </div>
             <div class="total">
-            <h3 class="total-title">Total:</h3>
-            <h3 class="total-value">$355,99</h3>
+                <h3 class="total-title">Total:</h3>
+                <h3 class="total-value">$355,99</h3>
             </div>
         </section>
 
