--- a/views/carrito.html
+++ b/views/carrito.html
@@ -10,7 +10,7 @@
     <!-- Links CSS -->
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style-home.css">
-    <link rel="stylesheet" href="css/style-carrito.css">
+    <link rel="stylesheet" href="css/style-carritob.css">
 
     <!-- Links Icons -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
@@ -41,7 +41,7 @@
     <main>
         <section class="resumen-cart-productos">
             <article class="producto1">
-                <div><img src="./img/guarderia_2.jpg" alt="Guarderia"></div>
+                <div class="slider-producto"><img src="./img/guarderia_2.jpg" alt="Guarderia"></div>
                 <div class="detalle-producto">
                     <div class="titulo-producto">
                         <h4>Guarderia 1</h4>
@@ -100,7 +100,7 @@
                     <div>2</div>
                     <i class="fas fa-plus"></i>
                 </div>
-                <h4 class="precio">$75,00</h4>
+                <h4 class="precio">$175,00</h4>
                 <h6 class="remover">Remover</h6>
             </article>
         </section>
@@ -109,26 +109,27 @@
             <div class="cod-descuento">
                 <h4>Tengo un código de descuento</h4>
                 <input type="text" name="codigoDescuento">
+                <button type="submit">Agregar código</button>
             </div>
-            <button type="submit">Agregar código</button>
+            
         </section>
 
         <section class="resumen-cart-total">
             <div class="subtotal">
-                <h4 class="subtotal-title">Subtotal:</h4>
-                <h4 class="subtotal-value">$455,99</h4>
+                <h5 class="subtotal-title">Subtotal:</h5>
+                <h5 class="subtotal-value">$555,99</h5>
             </div>
             <div class="impuestos-tasas">
-                <h4 class="impuestos-tasas-title">Impuestos y Tasas</h4>
-                <h4 class="impuestos-tasas-value">$0,00</h4>
+                <h5 class="impuestos-tasas-title">Impuestos y Tasas</h5>
+                <h5 class="impuestos-tasas-value">$0,00</h5>
             </div>
             <div class="descuento">
-                <h4 class="descuento-title">Descuento:</h4>
-                <h4 class="descuento-value">$100,00</h4>
+                <h5 class="descuento-title">Descuento:</h5>
+                <h5 class="descuento-value">$100,00</h5>
             </div>
             <div class="total">
-                <h3 class="total-title">Total:</h3>
-                <h3 class="total-value">$355,99</h3>
+                <h4 class="total-title">Total:</h4>
+                <h4 class="total-value">$455,99</h4>
             </div>
         </section>
 
