--- a/public/css/style-home.css
+++ b/public/css/style-home.css
@@ -14,21 +14,28 @@ header {
   position: fixed;
   top: 0;
   z-index: 9999;
+  height: 20%;
 }
 
+/* Topheader */
+
 .topheader {
-  display: block;
-  padding: 10px 0px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 10px;
   width: 100vw;
+  height: 80%;
   text-align: center;
 
 }
 
 .logo-menu {
-  display: inline-block;
-  width: 25vw;
+  display: block;
+  width: 33%;
   opacity: 80%;
   text-align: left;
+  padding-left: 5%;
 
 }
 
@@ -38,16 +45,18 @@ header {
 }
 
 .logo-alojamascotas {
-  display: inline-block;
-  width: 50vw;
-  max-width: 30%;
-  text-align: center;
+  display: block;
+  width: 33%;
+  min-width: 40vw;
+  max-height: 13vh;
+
 }
 
 .icon-search {
-  display: inline-block;
-  width: 12vw;
+  display: block;
+  width: 11%;
   padding: 10px;
+  margin-right: 5%;
 }
 
 .icon-search i {
@@ -57,8 +66,10 @@ header {
 }
 
 .icon-cart {
-  display: inline-block;
-  padding: 10px;
+  display: block;
+  width: 12%;
+  padding-right: 5%;
+ 
 }
 
 .icon-cart i {
@@ -67,26 +78,33 @@ header {
   opacity: 80%;
 }
 
+/* SubHeader */
+
 .subheader {
-  display: inline-block;
+  display: flex;
+  justify-content: space-evenly;
   font-size: 14px;
-  padding: 2vw 10vw;
+  padding: 5px 5%;
   width: 100vw;
+  height: 20%;
   text-align: center;
+  
 }
 
-.subheader a.crear-cuenta {
-  padding-right: 5vw;
+.subheader .crear-cuenta {
+  width: 50%;
   text-decoration: none;
   color: var(--verde-oscuro);
   opacity: 80%;
 }
-.subheader a.iniciar-sesion {
-  padding-left: 5vw;
+.subheader .iniciar-sesion {
+  width: 50%;
   text-decoration: none;
   color: var(--verde-oscuro);
   opacity: 80%;
 }
+
+/* Main */
 
 main {
   margin-top: 40%;
