--- a/views/home.html
+++ b/views/home.html
@@ -27,8 +27,7 @@
             <div class="logo-menu"><i class="fas fa-bars" alt="logo menu"></i></div>
             <img class="logo-alojamascotas" src="./img/logo-alojamascotas.svg" alt="logo de la empresa">
             <div class="icon-search"><i class="fas fa-search" alt="logo busqueda"></i></div>
-            <a href="/carrito">
-                <div class="icon-cart"><i class="fas fa-shopping-cart" alt="logo carrito"></i></div>
+            <div class="icon-cart" a href="/carrito"><i class="fas fa-shopping-cart" alt="logo carrito"></i></div>
         </section>
         <section class="subheader">
             <a class="crear-cuenta" href="/registro">CREAR CUENTA</a>
