--- a/views/inicia-sesion.html
+++ b/views/inicia-sesion.html
@@ -26,7 +26,7 @@
     <header>
         <section class="topheader">
             <div class="logo-menu"><i class="fas fa-bars" alt="logo menu"></i></div>
-            <img class="logo-alojamascotas" src="./img/logo-alojamascotas.svg" alt="logo de la empresa">
+            <div ><a href="/"><img class="logo-alojamascotas" src="./img/logo-alojamascotas.svg" alt="logo de la empresa"></a></div>
             <div class="icon-search"><i class="fas fa-search" alt="logo busqueda"></i></div>
             <a href="/carrito">
                 <div class="icon-cart"><i class="fas fa-shopping-cart" alt="logo carrito"></i></div>
