--- a/public/css/style-home.css
+++ b/public/css/style-home.css
@@ -32,8 +32,8 @@ header {
 
 .logo-menu {
   display: block;
-  width: 33%;
   opacity: 80%;
+  width: 15%;
   text-align: left;
   padding-left: 5%;
 
@@ -44,9 +44,18 @@ header {
   font-size: 32px;
 }
 
+.vacio {
+  display: block;
+  width: 15%;
+}
+
+.logo {
+  display: block;
+  width: 40%;
+}
+
 .logo-alojamascotas {
   display: block;
-  width: 33%;
   min-width: 40vw;
   max-height: 13vh;
 
@@ -54,9 +63,8 @@ header {
 
 .icon-search {
   display: block;
-  width: 11%;
+  width: 15%;
   padding: 10px;
-  margin-right: 5%;
 }
 
 .icon-search i {
@@ -67,8 +75,8 @@ header {
 
 .icon-cart {
   display: block;
-  width: 12%;
-  padding-right: 5%;
+  width: 15%;
+  padding-right: 3%;
  
 }
 
@@ -92,13 +100,20 @@ header {
 }
 
 .subheader .crear-cuenta {
-  width: 50%;
+  width: 45%;
   text-decoration: none;
   color: var(--verde-oscuro);
   opacity: 80%;
 }
+
+.line {
+  width: 0;
+  opacity: 50%;
+  border-inline: 0.5px solid black;
+}
+
 .subheader .iniciar-sesion {
-  width: 50%;
+  width: 45%;
   text-decoration: none;
   color: var(--verde-oscuro);
   opacity: 80%;
@@ -107,7 +122,7 @@ header {
 /* Main */
 
 main {
-  margin-top: 40%;
+  margin-top: 150px;
 }
 
 .main-slider {
