--- a/views/home.html
+++ b/views/home.html
@@ -25,12 +25,14 @@
     <header>
         <section class="topheader">
             <div class="logo-menu"><i class="fas fa-bars" alt="logo menu"></i></div>
-            <img class="logo-alojamascotas" src="./img/logo-alojamascotas.svg" alt="logo de la empresa">
+            <div class="vacio"></div>
+            <div class="logo"><a href="/"><img class="logo-alojamascotas" src="./img/logo-alojamascotas.svg" alt="logo de la empresa"></a></div>
             <div class="icon-search"><i class="fas fa-search" alt="logo busqueda"></i></div>
-            <div class="icon-cart" a href="/carrito"><i class="fas fa-shopping-cart" alt="logo carrito"></i></div>
+            <div class="icon-cart" ><a href="/carrito"><i class="fas fa-shopping-cart" alt="logo carrito"></i></a></div>
         </section>
         <section class="subheader">
             <a class="crear-cuenta" href="/registro">CREAR CUENTA</a>
+            <div class="line"></div>
             <a class="iniciar-sesion" href="/inicia-sesion">INICIAR SESION</a>
         </section>
 
