--- a/views/home.html
+++ b/views/home.html
@@ -26,9 +26,10 @@
         <section class="topheader">
             <div class="logo-menu"><i class="fas fa-bars" alt="logo menu"></i></div>
             <div class="vacio"></div>
-            <div class="logo"><a href="/"><img class="logo-alojamascotas" src="./img/logo-alojamascotas.svg" alt="logo de la empresa"></a></div>
+            <div class="logo"><a href="/"><img class="logo-alojamascotas" src="./img/logo-alojamascotas.svg"
+                        alt="logo de la empresa"></a></div>
             <div class="icon-search"><i class="fas fa-search" alt="logo busqueda"></i></div>
-            <div class="icon-cart" ><a href="/carrito"><i class="fas fa-shopping-cart" alt="logo carrito"></i></a></div>
+            <div class="icon-cart"><a href="/carrito"><i class="fas fa-shopping-cart" alt="logo carrito"></i></a></div>
         </section>
         <section class="subheader">
             <a class="crear-cuenta" href="/registro">CREAR CUENTA</a>
@@ -40,8 +41,10 @@
 
     <main>
         <section class="main-slider">
-            <img src="./img/main-slider-1.jpg" alt="imagen main 1">
+            <div class="slides">
+                <img src="./img/main-slider-1.jpg" alt="imagen main 1">
         </section>
+
         <section class="main-productos">
             <h3>NUESTRAS GUARDERIAS</h3>
             <div class="guarderia-1"><i class="fas fa-home"></i></div>
@@ -50,6 +53,7 @@
                 quibusdam explicabo autem debitis repellendus expedita?</p>
             <div class="boton-reservar"><a href="/detalle-producto">RESERVAR</a></div>
         </section>
+
         <section class="sobre-nosotros">
             <h3>SOBRE NOSOTROS</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod quo eveniet nobis, dolor repudiandae vel id
