--- a/views/detalle-producto.html
+++ b/views/detalle-producto.html
@@ -29,6 +29,7 @@
 
     </section>
 </header>
+<main>
 <article class="articulo1">
     <div class="container">
         <ul class="slider">
@@ -69,7 +70,32 @@
     </article>
 
     <article class="articulo2">
-        <img src="/img/guarderia_2.jpg" alt="guarderia2" class="imagen2">
+    <div class="container">
+        <ul class="slider">
+            <li id="slideA">
+                <img src="/img/CATIS_2.jpg" alt="guarderia2" class="imagen1"> 
+                <li id="slideB">
+                    <img src="/img/catis_3.jpg" alt="guarderiab" class="imagen2"> 
+                    <li id="slideC">
+                        <img src="/img/guarderia_2.jpg" alt="guarderiac" class="imagen3">     
+            </li>
+        </ul>
+    </div><br>
+    
+    <ul class="menu-articulo2">
+        <li>
+            <a href="#slideA">1</a> 
+            </li> 
+        <li>
+            <a href="#slideB">2</a>
+        </li>
+        <li>
+            <a href="#slideC">3</a>
+        </li>
+    
+    </ul>
+    
+    <article class="articulo2">
         <p><div class="nombre-guarderia">Guardería Catis</div></p>
         <p><div class="precios">$$$$</div></p>
         <div class="estrellas">
@@ -82,6 +108,7 @@
    <p> <div class="reservar"strong><a href="#">Reservar</a></strong><i class="fas fa-paw" class="huellita-reserva"></i></div></p>
 
 </article>
+</main>
 
 
 <footer>
