--- a/views/detalle-producto.html
+++ b/views/detalle-producto.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style-producto.css">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
     <!-- Links Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,126 +14,171 @@
 
 
     <title>detalle-producto</title>
-    </head>
+</head>
+
 <body>
     <header>
-    <section class="topheader">
-        <div class="logo-menu"><i class="fas fa-bars" alt="logo menu"></i></div>
-        <img class="logo-alojamascotas" src="./img/logo-alojamascotas.svg" alt="logo de la empresa">
-        <div class="icon-search"><i class="fas fa-search" alt="logo busqueda"></i></div>
-        <a href="/carrito">
-            <div class="icon-cart"><i class="fas fa-shopping-cart" alt="logo carrito"></i></div>
-    </section>
-    <section class="subheader">
-        <a class="crear-cuenta" href="/registro">CREAR CUENTA</a>
-        <a class="iniciar-sesion" href="/inicia-sesion">INICIAR SESION</a>
+        <section class="topheader">
+            <div class="logo-menu"><i class="fas fa-bars" alt="logo menu"></i></div>
+            <img class="logo-alojamascotas" src="./img/logo-alojamascotas.svg" alt="logo de la empresa">
+            <div class="icon-search"><i class="fas fa-search" alt="logo busqueda"></i></div>
+            <a href="/carrito">
+                <div class="icon-cart"><i class="fas fa-shopping-cart" alt="logo carrito"></i></div>
+        </section>
+        <section class="subheader">
+            <a class="crear-cuenta" href="/registro">CREAR CUENTA</a>
+            <a class="iniciar-sesion" href="/inicia-sesion">INICIAR SESION</a>
 
-    </section>
-</header>
-<main>
-<article class="articulo1">
-    <div class="container">
-        <ul class="slider">
-            <li id="slide1">
-                <img src="/img/guarderia_canina_1.jpg" alt="guarderia1" class="imagen1"> 
-                <li id="slide2">
-                    <img src="/img/guarderia1_slideb.jpg" alt="guarderiab" class="imagen2"> 
+        </section>
+    </header>
+    <main>
+        <article class="articulo1">
+            <div class="container">
+                <ul class="slider">
+                    <li id="slide1">
+                        <img src="/img/guarderia_canina_1.jpg" alt="guarderia1" class="imagen1">
+                    <li id="slide2">
+                        <img src="/img/guarderia1_slideb.jpg" alt="guarderiab" class="imagen2">
                     <li id="slide3">
-                        <img src="/img/guarderia1_slidec.jpg" alt="guarderiac" class="imagen2">     
-            </li>
-        </ul>
-    </div><br>
-    
-    <ul class="menu-articulo1">
-        <li>
-            <a href="#slide1">1</a> 
-            </li> 
-        <li>
-            <a href="#slide2">2</a>
-        </li>
-        <li>
-            <a href="#slide3">3</a>
-        </li>
-    
-    </ul>
-    
-    <!-- <img src="/img/guarderia_canina_1.jpg" alt="guarderia1" class="imagen1"> -->
-    <p><div class="nombre-guarderia">Guardería Wag Wag</div></p>
-    <p><div class="precios">$$$$</div></p>
-    <div class="estrellas">
-        <p><i class="fas fa-star"></i> <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i> </div></p><br>
-    <p><div class="cuerpo-detalle">
-        <p><h1>Características</h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, autem amet rerum eius quis assumenda libero excepturi illum! Ipsam nam numquam ab iusto nemo enim neque cumque praesentium officia repudiandae?
-    Voluptatibus qui nisi magnam consequuntur, ducimus alias rerum tempora neque nulla ipsam vitae nam consequatur facilis libero suscipit iste eos accusantium modi deleniti reiciendis aperiam quae ullam culpa labore? Eos!</p>
-    <h1>Instalaciones</h1>Quasi inventore illum excepturi, at dignissimos officia possimus assumenda in nihil corporis minus aliquid, soluta eum beatae dolore quas eligendi molestias accusantium? Ad porro sunt, assumenda non explicabo quasi at.
-    Illo, optio! Vitae ratione fugit quo fugiat, consequatur labore voluptatibus eius quibusdam reprehenderit aperiam voluptate atque ut non praesentium omnis minus voluptates. Enim, corporis? Voluptatibus quae dolore culpa corporis quasi. </div></p>
-    <p> <div class="reservar"strong><a href="#">Reservar</a></strong><i class="fas fa-paw" class="huellita-reserva"></i></div></p>
-    </article>
+                        <img src="/img/guarderia1_slidec.jpg" alt="guarderiac" class="imagen2">
+                    </li>
+                </ul>
+            </div><br>
 
-    <article class="articulo2">
-    <div class="container">
-        <ul class="slider">
-            <li id="slideA">
-                <img src="/img/CATIS_2.jpg" alt="guarderia2" class="imagen1"> 
-                <li id="slideB">
-                    <img src="/img/catis_3.jpg" alt="guarderiab" class="imagen2"> 
+            <ul class="menu-articulo1">
+                <li>
+                    <a href="#slide1">1</a>
+                </li>
+                <li>
+                    <a href="#slide2">2</a>
+                </li>
+                <li>
+                    <a href="#slide3">3</a>
+                </li>
+
+            </ul>
+
+            <!-- <img src="/img/guarderia_canina_1.jpg" alt="guarderia1" class="imagen1"> -->
+            <p>
+            <div class="nombre-guarderia">Guardería Wag Wag</div>
+            </p>
+            <p>
+            <div class="precios">$$$$</div>
+            </p>
+            <div class="estrellas">
+                <p><i class="fas fa-star"></i> <i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                        class="fas fa-star"></i>
+            </div>
+            </p><br>
+            <p>
+            <div class="cuerpo-detalle">
+                <p>
+                <h1>Características</h1> Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, autem amet
+                rerum eius quis assumenda libero excepturi illum! Ipsam nam numquam ab iusto nemo enim neque cumque
+                praesentium officia repudiandae?
+                Voluptatibus qui nisi magnam consequuntur, ducimus alias rerum tempora neque nulla ipsam vitae nam
+                consequatur facilis libero suscipit iste eos accusantium modi deleniti reiciendis aperiam quae ullam
+                culpa labore? Eos!</p>
+                <h1>Instalaciones</h1>Quasi inventore illum excepturi, at dignissimos officia possimus assumenda in
+                nihil corporis minus aliquid, soluta eum beatae dolore quas eligendi molestias accusantium? Ad porro
+                sunt, assumenda non explicabo quasi at.
+                Illo, optio! Vitae ratione fugit quo fugiat, consequatur labore voluptatibus eius quibusdam
+                reprehenderit aperiam voluptate atque ut non praesentium omnis minus voluptates. Enim, corporis?
+                Voluptatibus quae dolore culpa corporis quasi.
+            </div>
+            </p>
+            <p>
+            <div class="reservar" strong><a href="#">Reservar</a></strong><i class="fas fa-paw"
+                    class="huellita-reserva"></i></div>
+            </p>
+
+        </article>
+
+        <article class="articulo2">
+            <div class="container">
+                <ul class="slider">
+                    <li id="slideA">
+                        <img src="/img/CATIS_2.jpg" alt="guarderia2" class="imagen1">
+                    <li id="slideB">
+                        <img src="/img/catis_3.jpg" alt="guarderiab" class="imagen2">
                     <li id="slideC">
-                        <img src="/img/guarderia_2.jpg" alt="guarderiac" class="imagen3">     
-            </li>
-        </ul>
-    </div><br>
-    
-    <ul class="menu-articulo2">
-        <li>
-            <a href="#slideA">1</a> 
-            </li> 
-        <li>
-            <a href="#slideB">2</a>
-        </li>
-        <li>
-            <a href="#slideC">3</a>
-        </li>
-    
-    </ul>
-    
-    <article class="articulo2">
-        <p><div class="nombre-guarderia">Guardería Catis</div></p>
-        <p><div class="precios">$$$$</div></p>
-        <div class="estrellas">
-        <p><i class="fas fa-star"></i> <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i> </div></p><br>
-    <div class="cuerpo-detalle">
-        <p><h1>Características</h1> Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, autem amet rerum eius quis assumenda libero excepturi illum! Ipsam nam numquam ab iusto nemo enim neque cumque praesentium officia repudiandae?
-    Voluptatibus qui nisi magnam consequuntur, ducimus alias rerum tempora neque nulla ipsam vitae nam consequatur facilis libero suscipit iste eos accusantium modi deleniti reiciendis aperiam quae ullam culpa labore? Eos!</p>
-    <h1>Instalaciones</h1>Quasi inventore illum excepturi, at dignissimos officia possimus assumenda in nihil corporis minus aliquid, soluta eum beatae dolore quas eligendi molestias accusantium? Ad porro sunt, assumenda non explicabo quasi at.
-    Illo, optio! Vitae ratione fugit quo fugiat, consequatur labore voluptatibus eius quibusdam reprehenderit aperiam voluptate atque ut non praesentium omnis minus voluptates. Enim, corporis? Voluptatibus quae dolore culpa corporis quasi. </div></p>
-   <p> <div class="reservar"strong><a href="#">Reservar</a></strong><i class="fas fa-paw" class="huellita-reserva"></i></div></p>
+                        <img src="/img/guarderia_2.jpg" alt="guarderiac" class="imagen3">
+                    </li>
+                </ul>
+            </div><br>
 
-</article>
-</main>
+            <ul class="menu-articulo2">
+                <li>
+                    <a href="#slideA">1</a>
+                </li>
+                <li>
+                    <a href="#slideB">2</a>
+                </li>
+                <li>
+                    <a href="#slideC">3</a>
+                </li>
 
+            </ul>
 
-<footer>
-    <div class="footer-nav">
-        <div class="footer-nav1">
-            <a href="/inicia-sesion">Iniciar Sesion</a><br>
-            <a href="/registro">Registrarse</a><br>
-            <a href="#">Nosotros</a><br>
+            <article class="articulo2">
+                <p>
+                <div class="nombre-guarderia">Guardería Catis</div>
+                </p>
+                <p>
+                <div class="precios">$$$$</div>
+                </p>
+                <div class="estrellas">
+                    <p><i class="fas fa-star"></i> <i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                            class="fas fa-star"></i>
+                </div>
+                </p><br>
+                <div class="cuerpo-detalle">
+                    <p>
+                    <h1>Características</h1> Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, autem
+                    amet rerum eius quis assumenda libero excepturi illum! Ipsam nam numquam ab iusto nemo enim neque
+                    cumque praesentium officia repudiandae?
+                    Voluptatibus qui nisi magnam consequuntur, ducimus alias rerum tempora neque nulla ipsam vitae nam
+                    consequatur facilis libero suscipit iste eos accusantium modi deleniti reiciendis aperiam quae ullam
+                    culpa labore? Eos!</p>
+                    <h1>Instalaciones</h1>Quasi inventore illum excepturi, at dignissimos officia possimus assumenda in
+                    nihil corporis minus aliquid, soluta eum beatae dolore quas eligendi molestias accusantium? Ad porro
+                    sunt, assumenda non explicabo quasi at.
+                    Illo, optio! Vitae ratione fugit quo fugiat, consequatur labore voluptatibus eius quibusdam
+                    reprehenderit aperiam voluptate atque ut non praesentium omnis minus voluptates. Enim, corporis?
+                    Voluptatibus quae dolore culpa corporis quasi.
+                </div>
+                </p>
+                <p>
+                <div class="reservar" strong><a href="#">Reservar</a></strong><i class="fas fa-paw"
+                        class="huellita-reserva"></i></div>
+                </p>
+
+            </article>
+    </main>
+
+    <footer>
+        <div class="footer-nav">
+            <div class="footer-nav1">
+                <a href="/inicia-sesion">Iniciar Sesion</a><br>
+                <a href="/registro">Registrarse</a><br>
+                <a href="#">Nosotros</a><br>
+            </div>
+            <div class="footer-nav2">
+                <a href="#">Contacto</a><br>
+                <a href="#">FAQ</a><br>
+                <a href="#">Terminos y condiciones</a><br>
+            </div>
         </div>
-        <div class="footer-nav2">
-            <a href="#">Contacto</a><br>
-            <a href="#">FAQ</a><br>
-            <a href="#">Terminos y condiciones</a><br>
+        <div class="redes">
+            <h4>SEGUINOS EN NUESTRAS REDES</h4>
+            <a href="#"><i class="fab fa-facebook-square"></i></a>
+            <a href="#"><i class="fab fa-instagram-square"></i></a>
+            <a href="#"><i class="fab fa-twitter-square"></i></a>
         </div>
-    </div>
-    <div class="redes">
-        <h4>SEGUINOS EN NUESTRAS REDES</h4>
-        <a href="#"><i class="fab fa-facebook-square"></i></a>
-        <a href="#"><i class="fab fa-instagram-square"></i></a>
-        <a href="#"><i class="fab fa-twitter-square"></i></a>
-    </div>
-    <h6 class="copyright">Copyright © 2022 AlojaMascotas S.R.L.</h6>
+        <h6 class="copyright">Copyright © 2022 AlojaMascotas S.R.L.</h6>
 
-</footer>
+    </footer>
 
 </body>
+
 </html>
