--- a/views/carrito.html
+++ b/views/carrito.html
@@ -26,40 +26,65 @@
     <header>
         <section class="topheader">
             <div class="logo-menu"><i class="fas fa-bars" alt="logo menu"></i></div>
-            <img class="logo-alojamascotas" src="./img/logo-alojamascotas.svg" alt="logo de la empresa">
+            <div class="vacio"></div>
+            <div class="logo"><a href="/"><img class="logo-alojamascotas" src="./img/logo-alojamascotas.svg"
+                        alt="logo de la empresa"></a></div>
             <div class="icon-search"><i class="fas fa-search" alt="logo busqueda"></i></div>
-            <a href="/carrito">
-                <div class="icon-cart"><i class="fas fa-shopping-cart" alt="logo carrito"></i></div>
+            <div class="icon-cart"><a href="/carrito"><i class="fas fa-shopping-cart" alt="logo carrito"></i></a></div>
         </section>
         <section class="subheader">
             <a class="crear-cuenta" href="/registro">CREAR CUENTA</a>
+            <div class="line"></div>
             <a class="iniciar-sesion" href="/inicia-sesion">INICIAR SESION</a>
         </section>
-
     </header>
     <!-- Main: Secciones Resumen Cart - Codigo Descuento y Total -->
     <main>
         <section class="resumen-cart-productos">
             <article class="producto1">
-                <div class="slider-producto"><img src="./img/guarderia_2.jpg" alt="Guarderia"></div>
-                <div class="detalle-producto">
-                    <div class="titulo-producto">
-                        <h4>Guarderia 1</h4>
+                <div class="producto">
+                    <div class="slider-producto"><img src="./img/guarderia_2.jpg" alt="Guarderia"></div>
+                    <div class="detalle-producto">
+                        <h4 class="titulo-producto">Guarderia 1</h4>
+                        <p class="descripcion-producto">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
                     </div>
+                </div>
+                <div class="resumen-producto1">
                     <div class="categoria-producto">
-                        <h5>Categoria A</h5>
+                        <form action="categoria" method="GET">
+                            <label>Categoría:</label><br>
+                            <select name="categoria">
+                                <option value="cat1" selected>Cat. 1</option>
+                                <option value="cat2">Cat. 2</option>
+                                <option value="cat3">Cat. 3</option>
+                            </select>
+                        </form>
                     </div>
                     <div class="fechas-producto">
-                        <p>18/10/2022 al 25/10/2022</p>
+                        <label>Desde:</label><input type="date" name="fechaIngreso" value="2022-04-22" min="2022-04-01"
+                            max="2023-12-31">
+                        <label>Hasta:</label><input type="date" name="fechaSalida" value="2022-04-27" min="2022-04-01"
+                            max="2023-12-31">
                     </div>
+                    <div class="cantidad">
+                        <div class="mascota">
+                            <i class="fas fa-dog"></i>
+                            <i class="fas fa-plus"></i>
+                            <div>1</div>
+                            <i class="fas fa-minus"></i>
+                        </div>
+                        <div class="mascota">
+                            <i class="fas fa-cat"></i>
+                            <i class="fas fa-plus"></i>
+                            <div>1</div>
+                            <i class="fas fa-minus"></i>
+                        </div>
+                    </div>
+                    <label for="comentario">Comentario:</label>
+                    <textarea name="comentario" id="comentario">Contenido</textarea> 
+                    <h4 class="precio">$100,99</h4>
+                    <h6 class="remover">Remover</h6>
                 </div>
-                <div class="cantidad">
-                    <i class="fas fa-minus"></i>
-                    <div>1</div>
-                    <i class="fas fa-plus"></i>
-                </div>
-                <h4 class="precio">$100,99</h4>
-                <h6 class="remover">Remover</h6>
             </article>
             <article class="producto2">
                 <div><img src="./img/guarderia_canina_1.jpg" alt="Guarderia"></div>
@@ -111,7 +136,7 @@
                 <input type="text" name="codigoDescuento">
                 <button type="submit">Agregar código</button>
             </div>
-            
+
         </section>
 
         <section class="resumen-cart-total">
@@ -138,7 +163,7 @@
         </div>
 
     </main>
-
+    <!-- Footer -->
     <footer>
         <div class="footer-nav">
             <div class="footer-nav1">
